public/style.css
 body {
    /*height: 100%;*/
    background-image:url("pictures/popcornimage.jpg");
    background-size:cover;
    background-repeat:no-repeat;
    background-position:center;
    font-family: 'Roboto', sans-serif;

 }

.container {
    position: relative;
    text-align: center;
    /*margin-top: 360px;*/
}

.btn{
    border: 1px solid #F1BE61;
    background: none;
    padding: 10px 20px;
    font-size: 20px;
    cursor: pointer;
    margin: 10px;
    transition: 0.8s;
    position: relative;
    overflow: hidden;
    z-index:20;
}

.btn3,.btn4{
    color: #fff;
}

.btn3:hover,.btn4:hover{
    color: #F1BE61;
}
.btn::before{
    content: "";
    position: absolute;
    left: 0;
    width: 100%;
    height: 0%;
    background: #F1BE61;
    z-index: -1;
    transition: 0.8s;
}
.btn3::before{
    top: 0;
    border-radius: 0 0 50% 50%;
}
.btn4::before{
    bottom: 0;
    border-radius: 50% 50% 0 0;
}
.btn3::before,.btn4::before{
    height: 180%;
}

.btn3:hover::before,.btn4:hover::before{
    height: 0%;
}


 .h-scroll {
     height: 130vh; /* %-height of the viewport */
     overflow-y: scroll;
 }

 #movies{
     /*position:relative;*/
     /*align-content:center;*/
     height:500px;
     width:100%;
     margin-top: 20px;
     text-align:justify;
     background-color:rgba(204,204,204,0.75);
 }

 #popcornRunning{
     height:300px;
     width:300px;
     margin-left:37%;
 }

 .fancy-header{
     color:#ED6973;
     font-family: 'Monoton', cursive;


 }


 #divider1{
     position:relative;
     margin-top:50px;
     background-color:#ED6973;
     width:350px;
     height:300px;
     float:left;
     text-align:center;
     opacity:.95;
     border-radius:10%;

 }


 #divider2{
     margin-top:25px;
     margin-left:10px;
     background-color:#ED6973;
     width:350px;
     height:300px;
     float:left;
     opacity:.95;
     border-radius:10%;


 }

 #divider3{
     /*margin-top:5px;*/
     margin-left:10px;
     background-color:#ED6973;
     width:350px;
     height:300px;
     float:left;
     opacity:.95;
     border-radius:10%;


 }


 .divider-heading{
     font-size:25px;
     color:white;



 }

 .dividerPics{
     width:175px;
     height:125px;
 }

 #deleteSubmit{
     margin-top:30px;
 }

 #editMovies{
     width:90%;
 }


 #deleteMovies{
     width:90%;
    margin-top:5px;

 }
 #jumbotron{
     background-color:#F1BE61;
     font-weight:bold;
     font-size:20px;
     opacity:.90;
 }
 #jumbotron-heading{
     font-size:50px;
     font-family: 'Monoton', cursive;

 }
 #movieDetailSelect{
     margin-top:30px;
 }

 .posterSize{
     width:175px;
     height:225px;
 }
 #browse{
     text-align:center;
 }
 /*#searchMovies{*/
 /*    margin-top:200px;*/
 /*}*/

